force-app/main/default/objects/Park_Config__mdt/Park_Config__mdt.object-meta.xml
<CustomObject>
    <label>Park Config</label>
    <pluralLabel>Park Configs</pluralLabel>
</CustomObject>