force-app/main/default/objects/Park_Config__mdt/fields/Allows_Recreational_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Allows_Recreational_Vehicles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allows Recreational Vehicles</label>
    <type>Checkbox</type>
</CustomField>