force-app/main/default/objects/Park_Config__mdt/fields/Black_Bears_Present__c.field-meta.xml
<CustomField>
    <fullName>Black_Bears_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Black Bears Present</label>
    <type>Checkbox</type>
</CustomField>