force-app/main/default/objects/Park_Config__mdt/fields/Brown_Bears_Present__c.field-meta.xml
<CustomField>
    <fullName>Brown_Bears_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brown_Bears_Present</label>
    <type>Checkbox</type>
</CustomField>