force-app/main/default/objects/Park_Config__mdt/fields/Closes_At__c.field-meta.xml
<CustomField>
    <fullName>Closes_At__c</fullName>
    <label>Closes At</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>