force-app/main/default/objects/Park_Config__mdt/fields/Grizzly_Bears_Present__c.field-meta.xml
<CustomField>
    <fullName>Grizzly_Bears_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grizzly Bears Present</label>
    <type>Checkbox</type>
</CustomField>