force-app/main/default/objects/Park_Config__mdt/fields/Has_Power__c.field-meta.xml
<CustomField>
    <fullName>Has_Power__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Power</label>
    <type>Checkbox</type>
</CustomField>