force-app/main/default/objects/Park_Config__mdt/fields/Has_Water__c.field-meta.xml
<CustomField>
    <fullName>Has_Water__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Water</label>
    <type>Checkbox</type>
</CustomField>