force-app/main/default/objects/Park_Config__mdt/fields/Opens_At__c.field-meta.xml
<CustomField>
    <fullName>Opens_At__c</fullName>
    <label>Opens At</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>