force-app/main/default/objects/Park_Config__mdt/fields/Trailblazing_Bear_Name__c.field-meta.xml
<CustomField>
    <fullName>Trailblazing_Bear_Name__c</fullName>
    <label>Trailblazing Bear Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>