force-app/main/default/objects/Park_Config__mdt/fields/Trailblazing_Bear_Present__c.field-meta.xml
<CustomField>
    <fullName>Trailblazing_Bear_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailblazing Bear Present</label>
    <type>Checkbox</type>
</CustomField>